# Sheriff

./: .gitignore  LICENSE  README.md  requirements.txt
.qt_for_python/rcc/: ui.py
.qt_for_python/uic/: app.py
package/: MANIFEST.in  README.md  pyproject.toml  setup.py
package/src/sheriff/: __init__.py  gui.py
package/src/sheriff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: main.py
